<resources>
    <string name="application_name">PhoneX</string>
    <string name="permission_phonex" translatable="false">PhoneX</string>
    <string name="permission_phonex_desc">General PhoneX permission, used for plugins and extensions.</string>
    <string name="registered">Registered</string>
    <string name="unregistered">Unregistered</string>
    <string name="about">About</string>
    <string name="connection_not_valid">Selected network route not allowed with current settings you have setup</string>
    <string name="invalid_sip_uri">Cannot make call to the given contact. It is invalid.</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete_account">Delete account</string>
    <string name="add_account">Add contact</string>
    <string name="call">Call</string>
    <string name="message_notification">New message</string>
    <string name="ongoing_call">Call in Progress</string>
    <string name="missed_call">Missed call</string>
    <string name="messages_tab_name_text">Messages</string>
    <string name="notifications_tab_name_text">Notifications</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="service_notification_registered">PhoneX registered</string>
    <string name="service_notification_unregistered">PhoneX not registered</string>
    <string name="faq">FAQ</string>
    <string name="help">Help</string>
    <string name="ok">OK</string>
    <string name="logout">Log out</string>
    <string name="quit_info">By logging off, you won\'t be able to take calls and receive messages, are you sure?</string>
    <string name="another_application_use_sip_port">Error: Another application is using SIP port. Can\'t start !</string>
    <string name="voice_mail">Voice mail</string>
    <string name="not_configured_multiple_calls">PhoneX currently does not support multiple calls</string>
    <string name="downloading_text">Downloading</string>
    <string name="loading">Loading</string>
    <string name="info">Info</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="away">Away</string>
    <string name="busy">Busy</string>
    <string name="pinconfirm">Confirm</string>
    <string name="pin_block_info">Application is blocked</string>
    <string name="pin_block_reason_retries">Too many attempts</string>
    <string name="clist_add_title">Add contact</string>
    <string name="clist_add_sip">Username</string>
    <string name="clist_add_choosealias">Choose alias</string>
    <string name="clist_add_displayname">Alias</string>
    <string name="clist_add_inwhitelist">In whitelist</string>
    <string name="clist_add_add">Add</string>
    <string name="clist_add_description">Type a unique username of the contact you want to add. Ask your contact for his username.</string>
    <string name="empty_messages">No messages</string>
    <string name="empty_notifications">No notifications</string>
    <string name="contact_details">Details</string>
    <string name="contacts_tab_name_text">Contacts</string>
    <string name="rename_account">Rename</string>
    <string name="rename_account_title">Rename alias</string>
    <string name="rename_account_new">New alias:</string>
    <string name="presence_online">Online</string>
    <string name="presence_away">Away</string>
    <string name="presence_invisible">Invisible</string>
    <string name="intro_login">Username</string>
    <string name="intro_pass">Password</string>
    <string name="intro_pass_confirmation">Password confirmation</string>
    <string name="intro_pass_change">Change password</string>
    <string name="intro_connect">Sign in</string>
    <string name="intro_set_new_password">Set new password (8 characters min)</string>
    <string name="intro_remember_me">Remember login</string>
    <string name="p_authentication">Authentication</string>
    <string name="p_authentication_failed">Authentication failed</string>
    <string name="p_error_empty_login">Login name is empty</string>
    <string name="p_error_empty_password">Password is empty</string>
    <string name="p_success">Success</string>
    <string name="p_error">Error</string>
    <string name="p_almost_there">Almost there...</string>
    <string name="p_not_before_certificate">Your account is prepared!\n\nBut there is some time skew in your device clock and server clock so your certificate is not yet valid. You have to wait some time until you will be able to login. \n\nPlease wait: %1$s minutes, %2$s seconds</string>
    <string name="p_problem">Problem</string>
    <string name="p_problem_nonspecific">Problem occurred, probably due to Internet connection, please try again later.</string>
    <string name="p_problem_resolv">An internet connection is required to sign in PhoneX. Check your connection and try again.</string>
    <string name="p_problem_socket">Connection to the server cannot be established, probably due to Internet connection. Please try again later.</string>
    <string name="p_problem_auth_bad_response">Problem occurred, server returned unexpected result. \n\nYou have probably outdated application version, try update please.</string>
    <string name="p_problem_bad_response">Problem occurred, server returned unexpected result.</string>
    <string name="p_problem_bad_certificate">Problem occurred, returned certificate is invalid.</string>
    <string name="p_problem_badcredential">Your login or password is invalid.</string>
    <string name="p_problem_account_disabled">Your account is disabled. Please contact your manager.</string>
    <string name="p_problem_trial_expired">Trial version for your account expired.</string>
    <string name="p_problem_trial_about_to_expire">Your trial account is about to expire.\n\nAccount will be invalid in %1$s days, %2$s hours</string>
    <string name="p_problem_time_drift">Your system time is not synchronized with server time. This causes problems with login.\n\nServer time: %1$s\n</string>
    <string name="p_problem_time_drift_forward">Your time is shifted forward by %1$s.</string>
    <string name="p_problem_time_drift_backward">Your time is shifted backward by %1$s.</string>
    <string name="p_problem_db_general">Problem with opening encrypted database. Cannot continue. \n\nIf problem repeats, please consider removing all application data or reinstalling application.</string>
    <string name="p_generating_keypair">Generating key-pair</string>
    <string name="p_getting_token">Obtaining server token</string>
    <string name="p_sending_csr">Sending CSR to server to sign</string>
    <string name="p_storing_csr">Storing certificate</string>
    <string name="p_generating_key">Generating encryption key</string>
    <string name="p_rekey_keystore">Encrypting private key with new password</string>
    <string name="p_rekey_database">Encrypting database with new password</string>
    <string name="p_testing_db">Testing encrypted database</string>
    <string name="p_getting_client_csr">Obtaining client certificate</string>
    <string name="p_sending_clist">Storing contact list on server</string>
    <string name="p_saving_csr">Storing locally</string>
    <string name="p_getting_clist">Fetching contact list from server</string>
    <string name="p_processing_clist">Processing received list</string>
    <string name="p_processing_csr">Processing certificates</string>
    <string name="p_getting_local_clist">Loading local certificates</string>
    <string name="p_getting_missing_csr">Downloading missing certificates</string>
    <string name="p_synchronizing_clist">Synchronizing contact list</string>
    <string name="p_deleting_contact">Deleting contact from to server</string>
    <string name="p_deleting_contact_localy">Deleting locally</string>
    <string name="p_deleting_contact_artifacts">Deleting contact artefacts</string>
    <string name="p_renaming_contact_localy">Renaming locally</string>
    <string name="p_sending_request">Sending server request</string>
    <string name="p_getting_response">Getting response</string>
    <string name="p_rename_success">Contact %1$s has been renamed to %2$s.</string>
    <string name="p_add_success">Contact %s has been added.</string>
    <string name="p_delete_success">Contact %s has been deleted.</string>
    <string name="p_encrypting_pass">Encrypting password</string>
    <string name="p_encrypting_csr">Encrypting CSR</string>
    <string name="p_renaming">Renaming contact</string>
    <string name="p_deleting">Deleting contact</string>
    <string name="p_rename_confirm">Do you really want to delete this account?</string>
    <string name="p_loading_personal_credential">Loading personal credentials</string>
    <string name="change_password">Change password</string>
    <string name="change_password_desc">Change login password into PhoneX.</string>
    <string name="my_certificate">My certificate</string>
    <string name="my_certificate_desc">Shows certificate in detail.</string>
    <string name="sync_certificates">Synchronize certificates</string>
    <string name="sync_certificates_desc">Checks for new certificates of contacts.</string>
    <string name="sync_dhkeys">Synchronize keys</string>
    <string name="sync_dhkeys_desc">Checks encryption keys for file transfer.</string>
    <string name="dummy_displayname">e.g., John Smith</string>
    <string name="trial_button_submit">Submit</string>
    <string name="password_requirements">Requirements:\n&#8226; Min 8 characters.\n&#8226; Contains letters and numbers.</string>
    <string name="sign_in">Sign in</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="new_password_confirmation">New password confirmation</string>
    <string name="lbl_camera_instance">Use front camera</string>
    <string name="lbl_close">Close</string>
    <string name="lbl_focus_mode">Focus mode</string>
    <string name="lbl_resolution">Resolution</string>
    <string translatable="false" name="send_logs">Send logs</string>
    <string translatable="false" name="send_logs_explanation">Logs help us to solve issues faster. The sent logs do not contain any private information. The process may take up to a minute.</string>
    <string translatable="false" name="send_logs_user_message_hint">Describe your issue here…</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="subscriptions_desc">Currently activated subscriptions.</string>
    <string name="packages">Packages</string>
    <string name="packages_desc">Packages you have purchased.</string>
    <string name="restore_purchases">Restore purchases</string>
    <string name="or_text">or</string>
    <string name="slide_start_title">Start now</string>
    <string name="slide_start_desc">Select username and password and create your PhoneX account, no phone number is required.</string>
    <string name="create_new_account">Create new account</string>
    <string name="pass_reset_desc">To reset your password, enter your username. You will receive an email with your recovery code for one-time login and password reset.</string>
    <string name="send_recovery_code">Send recovery code</string>
    <string name="enter_recovery_code">Enter recovery code</string>
    <string name="apply_recovery_code">Apply code</string>
    <string name="recovery_email">Recovery email</string>
    <string name="recovery_email_desc">Email to send a recovery code in case of forgotten password.</string>
    <string name="enter_recovery_email">Enter recovery email</string>
    <string name="recovery_email_missing_warning">No recovery email is set up! In case of forgotten password, you may lose access to your account.</string>
    <string name="recover_email_explanation">Recovery email is used in case of forgotten password. It won\'t be shared with other third parties.</string>
</resources>