<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:orientation="vertical"

    >
    <!--android:background="@drawable/app_layered_background"-->

    <TextView
        android:id="@+id/password_requirements"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_requirements"
        android:textSize="16sp"
        android:layout_marginBottom="4dp"
        android:textColor="@color/text_gray"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/old_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/edit_text_flat"
        android:hint="@string/old_password"
        android:visibility="gone"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:inputType="textPassword" >
    </EditText>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/edit_text_flat"
        android:hint="@string/new_password"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:inputType="textPassword" >
    </EditText>

    <EditText
        android:id="@+id/passwordConfirmation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_password_confirmation"
        android:layout_marginTop="4dp"
        style="@style/edit_text_flat"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/change_password_button"
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:textAllCaps="false"
        android:text="@string/intro_pass_change"
        android:layout_height="40dp"
        style="@style/button_flat_orange"
        />
</LinearLayout>