<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">
    <!--This form should be placed within linear layout vertically oriented-->
    <TextView
        android:id="@+id/password_requirements"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_requirements"
        android:textSize="16sp"
        android:layout_marginBottom="4dp"
        android:textColor="@color/text_gray"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/old_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/edit_text_flat"
        android:hint="@string/old_password"
        android:visibility="gone"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:inputType="textPassword" >
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/edit_text_flat"
        android:hint="@string/intro_pass"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/passwordConfirmation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/intro_pass_confirmation"
        android:layout_marginTop="4dp"
        style="@style/edit_text_flat"
        android:inputType="textPassword" />
</merge>