<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/phonex_background"
    tools:context="net.phonex.ui.intro.ForgotPasswordFragment">

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/phonex_color_primary"
        />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/my_toolbar"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pass_reset_desc"
                android:textSize="16sp"
                android:layout_marginBottom="4dp"
                android:fontFamily="sans-serif-light" />

            <EditText
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:imeActionId="1"
                android:hint="@string/intro_login"
                style="@style/edit_text_flat"
                android:imeOptions="actionNext" />

            <Button
                android:id="@+id/send_recovery_code"
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:textAllCaps="false"
                android:text="@string/send_recovery_code"
                android:layout_height="40dp"
                style="@style/button_flat_orange"
                />


            <EditText
                android:id="@+id/recovery_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:singleLine="true"
                android:imeActionId="1"
                android:hint="@string/enter_recovery_code"
                style="@style/edit_text_flat"
                android:imeOptions="actionGo" />


            <Button
                android:id="@+id/login_with_recovery"
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:enabled="false"
                android:textAllCaps="false"
                android:text="@string/apply_recovery_code"
                android:layout_height="40dp"
                style="@style/button_flat_orange"
                />

        </LinearLayout>

    </ScrollView>
</RelativeLayout>

