<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="net.phonex.ui.logUpload.LogUploadActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_logs_explanation"
            android:layout_marginBottom="4dp"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/user_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="3"
            android:gravity="top|left"
            android:minLines="3"
            android:inputType="textMultiLine"
            style="@style/edit_text_flat"
            android:hint="@string/send_logs_user_message_hint"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:imeOptions="actionNext"
             />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:textAllCaps="false"
            android:text="@string/trial_button_submit"
            android:layout_height="40dp"
            style="@style/button_flat_orange"
            />


    </LinearLayout>

</LinearLayout>





